In 'public/styles/layout.css', set fonts Bungee & Source Sans 3 to be used.

--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,14 @@
   <script type="text/javascript" src="/scripts/client.js"></script>
 </head>
 
+
 <body>
   <!-- Top nav bar (fixed) -->
   <nav>
     <span>tweeter</span>
   </nav>
+
+  <p>Is this rendered in Source Sans 3?</p>
 
   <!-- Page-specific (main) content here -->
   <main class="container"></main>
