--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+3:wght@300;600&display=swap"
     rel="stylesheet">
 
-  <!-- App CSS -->
+
+  <!-- CSS FILES -->
+  <!-- Main CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+
+  <!-- Nav Bar CSS -->
+  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
