Add 'public/styles/header.css' file. Add associated 'header' element to 'public/index.html'. Add texture file 'brick-wall-dark.png'.

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
   <!-- Nav Bar CSS -->
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+  <!-- Header CSS -->
+  <link rel="stylesheet" href="/styles/header.css" type="text/css">
+
 
   <!-- JAVASCRIPT FILES -->
   <!--jQUERY -->
@@ -45,8 +48,9 @@
 
 <body>
 
-  <!-- Top nav bar (fixed) -->
+  <!-- TOP NAV BAR (Fixed) -->
   <nav>
+
     <span id="Nav-Title">tweeter</span>
 
     <div id="New-Tweet-Invite">
@@ -56,7 +60,22 @@
 
   </nav>
 
-  <p>Is this rendered in Source Sans 3?</p>
+
+  <!-- USER BIO HEADER -->
+  <header>
+
+    <!-- USER AVATAR -->
+    <div>
+      <img src="/images/profile-hex.png">
+    </div>
+    <br>
+
+    <!-- USER NAME -->
+    <div>
+      <h2>Voldemort</h2>
+    </div>
+
+  </header>
 
   <!-- Page-specific (main) content here -->
   <main class="container"></main>
