--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,19 @@
 
   </header>
 
-  <!-- Page-specific (main) content here -->
-  <main class="container"></main>
+
+  <!-- TWEET DISPLAY CONTAINER -->
+  <main id="Tweet-Container">
+
+    <h2>Nonsensical Header</h2>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
+
+  </main>
 
 </body>
 
