Add 'composer-char-counter.js' to 'public/scripts/'. Update this file, 'index.html' and 'new-tweet.css' to add character counting functionality to the new tweet form.

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
   <script src="https://kit.fontawesome.com/adc918ce2d.js" crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="/scripts/client.js"></script>
+
+  <!-- Character Counter  -->
+  <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
 </head>
 
 
