Add 'tweet-body.css' to 'public/styles'. Add selectors to it. Edit 'public/index.html' to add 'Recent Tweets' section and associated elements.

--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,19 @@
     type="text/css" />
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="styles/layout.css" type="text/css" />
 
   <!-- Nav Bar CSS -->
-  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <link rel="stylesheet" href="styles/nav.css" type="text/css" />
 
   <!-- Header CSS -->
-  <link rel="stylesheet" href="/styles/header.css" type="text/css">
+  <link rel="stylesheet" href="styles/header.css" type="text/css">
 
   <!-- New Tweet CSS -->
-  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css">
+  <link rel="stylesheet" href="styles/new-tweet.css" type="text/css">
+
+  <!-- Tweet Body CSS -->
+  <link rel="stylesheet" href="styles/tweet-body.css" type="text/css">
 
 
   <!-- JAVASCRIPT FILES -->
@@ -49,6 +52,7 @@
 
   <!-- Character Counter  -->
   <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
+
 </head>
 
 
@@ -68,7 +72,7 @@
 
 
   <!-- USER BIO HEADER -->
-  <header>
+  <header id="User-Profile">
 
     <!-- USER AVATAR -->
     <div>
@@ -84,7 +88,7 @@
   </header>
 
 
-  <!-- TWEET DISPLAY CONTAINER -->
+  <!-- NEW TWEET FORM CONTAINER -->
   <main id="Tweet-Container">
 
     <!-- NEW TWEET CARD -->
@@ -105,6 +109,62 @@
         </div>
 
       </form>
+
+    </section>
+
+
+    <!-- TWEET DISPLAY CONTAINER  -->
+    <section id="Tweet-Body">
+
+      <!-- SECTION HEADING -->
+      <h2>Recent Tweets</h2>
+
+      <!-- TWEETS -->
+      <article>
+
+        <!-- TWEET HEADER -->
+        <header>
+
+          <div>
+
+            <!-- USER'S PHOTO -->
+            <img src="images/user-image.png" alt="User's Photo">
+
+            <!-- USER'S REAL NAME -->
+            <p>Tom Riddle</p>
+
+          </div>
+
+          <!-- USER HANDLE -->
+          <a href="#">@LastOfTheGaunts</a>
+
+        </header>
+
+
+        <!-- TWEET BODY -->
+        <output>RISE UP DEATH EATERS! Strike back! Lord Voldemort commands it!
+          Do you love your master? Then do as I command. Show the Order of
+          Phoenix no quarter! Also, like my tweets! I command that too!
+        </output>
+
+
+        <!-- TWEET FOOTER -->
+        <footer>
+
+          <!-- TIME THAT THE TWEET WAS POSTED -->
+          <p>10 days ago</p>
+
+
+          <!-- SOCIAL MEDIA OPTIONS -->
+          <div>
+            <a href="#" alt="Flag Button"><i class="fa-solid fa-flag"></i></a>
+            <a href="#" alt="Retweet Button"><i class="fa-solid fa-retweet"></i></a>
+            <a href="#" alt="Heart Button"><i class="fa-solid fa-heart"></i></a>
+          </div>
+
+        </footer>
+
+      </article>
 
     </section>
 
