Add references to 'timeago' to both 'public/index.html' and 'public/scripts/client.js'. Also update 'client.js' to use timeago to update the time passed since value in tweets.

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,25 @@
   <!--jQUERY -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+  <!-- TimeAgo Library -->
+  <!-- I need a library that can calculate the amount of time that has passed
+       since a Tweet was posted. Using plain JS do date-related calculations
+       is way too complicated, so let's use the `timeago` library.
+       Source: https://github.com/hustcc/timeago.js.
+
+       When you want to use a library for the front-end of a project, you can
+       use a `<script>` tag in your `index.html` file that downloads the library
+       when the browser loads your web page.
+
+       This particular library is hosted on `cdnjs.com`. Just search for the
+       library you want and click on it. Copy the `script` tag and paste it
+       into `index.html` Now you can call it in your `scripts` folder.
+  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+    integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+  </script>
+
   <!-- FONT AWESOME -->
   <script src="https://kit.fontawesome.com/adc918ce2d.js" crossorigin="anonymous"></script>
 
