Rename 'public/styles/tweet-container.css' to 'tweets-container.css' to make it more consistent. Also update 'public/index.html'.

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="styles/new-tweet.css" type="text/css">
 
   <!-- Tweet Body CSS -->
-  <link rel="stylesheet" href="styles/tweet-container.css" type="text/css">
+  <link rel="stylesheet" href="styles/tweets-container.css" type="text/css">
 
 
   <!-- JAVASCRIPT FILES -->
