Add new image to 'public/images'. Change user profile image in 'public/index.html'. Add styles for it in 'public/styles/header.css'.

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
 
     <!-- USER AVATAR -->
     <div>
-      <img src="/images/profile-hex.png">
+      <img src="./images/Lord-Voldemort.jpg">
     </div>
     <br>
 
