--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
   <!-- Tweet Body CSS -->
   <link rel="stylesheet" href="styles/tweets-container.css" type="text/css">
 
+  <!-- Media Query CSS -->
+  <link rel="stylesheet" href="styles/media-queries.css" type="text/css">
+
 
   <!-- JAVASCRIPT FILES -->
   <!--jQUERY -->
@@ -91,69 +94,77 @@
   </nav>
 
 
-  <!-- USER BIO HEADER -->
-  <header id="User-Profile">
-
-    <!-- USER AVATAR -->
-    <div>
-      <img src="./images/Lord-Voldemort.jpg">
-    </div>
-    <br>
-
-    <!-- USER NAME -->
-    <div>
-      <h2>Voldemort</h2>
-    </div>
-
-  </header>
+  <!-- Primary Container for `User-Profile` & `Tweet-Container-Main`. -->
+  <div id="Primary-Content">
 
 
-  <!-- NEW TWEET FORM CONTAINER -->
-  <main id="Tweet-Container-Main">
+    <!-- USER BIO HEADER -->
+    <header id="User-Profile">
 
-    <!-- NEW TWEET CARD -->
-    <section id="New-Tweet-Section">
+      <!-- USER AVATAR -->
+      <div>
+        <img src="./images/Lord-Voldemort.jpg">
+      </div>
+      <br>
 
-      <h2>Compose Tweet</h2>
+      <!-- USER NAME -->
+      <div>
+        <h2>Voldemort</h2>
+      </div>
 
-      <!-- NEW TWEET FORM -->
-      <form method="POST" action="/tweets/">
-
-        <!-- ERROR MESSAGES -->
-        <!-- Error Messages will be inserted into this `span` from `client.js`. -->
-        <div id="Error-Container"><span id="Error-Message"></span></div>
-
-
-        <!-- TWEET ENTRY ELEMENTS -->
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text" placeholder="Write your tweet here"></textarea>
+    </header>
 
 
-        <!-- TWEET SUBMIT & COUNTER ELEMENTS -->
-        <div>
-          <button type="submit">TWEET</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
+    <!-- NEW TWEET FORM CONTAINER -->
+    <main id="Tweet-Container-Main">
 
-      </form>
+      <!-- NEW TWEET CARD -->
+      <section id="New-Tweet-Section">
 
-    </section>
+        <h2>Compose Tweet</h2>
+
+        <!-- NEW TWEET FORM -->
+        <form method="POST" action="/tweets/">
+
+          <!-- ERROR MESSAGES -->
+          <!-- Error Messages will be inserted into this `span` from `client.js`. -->
+          <div id="Error-Container"><span id="Error-Message"></span></div>
 
 
-    <!-- TWEET DISPLAY CONTAINER  -->
-    <section id="Tweets-Container">
+          <!-- TWEET ENTRY ELEMENTS -->
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text" placeholder="Write your tweet here"></textarea>
 
-      <!-- SECTION HEADING -->
-      <h2>Recent Tweets</h2>
 
-      <!-- TWEETS -->
-      <!-- This is where all the Tweets will be added dynamically, from
-           `client.js`.
-      -->
+          <!-- TWEET SUBMIT & COUNTER ELEMENTS -->
+          <div>
+            <button type="submit">TWEET</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
 
-    </section>
+        </form>
 
-  </main>
+      </section>
+
+
+      <!-- TWEET DISPLAY CONTAINER  -->
+      <section id="Tweets-Container">
+
+        <!-- SECTION HEADING -->
+        <h2>Recent Tweets</h2>
+
+        <!-- TWEETS -->
+        <!-- This is where all the Tweets will be added dynamically from the
+             "database" (/server/data-files/initial-tweets.json). The driver
+             code that does this can be found in `client.js`.
+        -->
+
+      </section>
+
+    </main>
+
+
+  </div>
 
 
 </body>
